V 0.4.0
=======
- New features:
  - New features in existing functions : 
    - To avoid issues based on column names, we will check and rename columns that have same names. 
    - In *aggregateByKey* generated column names are changed to be more explicit. 
    - In *aggregateByKey* generated from character column with more than \code{thresh} values is now count of unique instead of count.

- Bug fixes:
  - *whichAreBijection* and *whichAreInDouble* are using *bi_col_test* which was not working with 2 column data set. It is fixed.

- Other changes: 
  - Changed *whichAreIncluded* example since it was to slow for CRAN. Also it might be a little bit more explicit now.
  - Changed *aggregateByKey* example since it was to slow for CRAN.

- Integration:
  - Rewrite all *whichFunction.R*, *aggregate.R*, *numericsManuipulations.R*, *sameShape.R*, *prepareSet.R*, *discretization.R* tests to make them more readable
  - Rewrite some of *generericFunctions.R*, *setColAs* tests to make them more readable
  - Code coverage is improved, depencies on *messy_adult* set is lowered

WARNING:
- In *aggregateByKey* generated column names are changed.
- In *aggregateByKey* generated column for character is different.

V 0.3.9
=======
- Integration:
  	- Matching new devtools requierments
  	- Starting to rewrite unittest to make it more readable

V 0.3.8
=======
- New features:
  	- New features in existing functions:
		- Identification of bijection through internal function *fastIsBijection* is way faster (up to 40 times faster in case of bijection). So *whichArebijection* and *fastFiltervariables* are also improved.
		- Remove remaining *gc* to save time. 
		- In *one_hot_encoder* added parameter *type* to make choise between logical or numerical results.
	  
  	  
V 0.3.7
=======
- New features:
	- New functions:
		- Function *as.POSIXct_fast* is now available. It helps to transform to POSIXct way faster (if the same date value is present multiple times in the column).